15-03/18 criando marcacao html e automacao de tarefas

--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link  rel="stylesheet" href="css/bootstrap.css">
-    <link  rel="stylesheet" href="css/teste.css">
+    <link  rel="stylesheet" href="css/index.css">
     <title>Decorações de festas!</title>
 </head>
 <body>
-    <div class="class container-fluid">
-        <h1>asodhasiudhasiuhd</h1>
-        <p>BLABLABLADASD</p>
-    </div>
+    <header>
+        <nav>
+            <div>
+                <h1></h1>
+            </div>
+            <div>
+                <ul>
+                    <li>Portfolio</li>
+                    <li>Sobre</li>
+                    <li>Contrate</li>
+                </ul>
+            </div>
+        </nav>
+            <section>
+                <div>
+                    <h2>Trakinagem</h2>
+                    <p>Fazemos sua decoração com muita paixão</p>
+                 </div>
+                <a role="button">Contrate agora</a>
+            </section>
+            <section>
+                <h3>Últimas decorações</h3>
+                <div>
 
+                </div>
+                <div>
 
+                </div>
+                <div>
 
+                </div>
 
+                <a role="button">Saiba mais</a>
+            </section>
+            <section>
+                <div>
+                    <h3>O que fazemos?</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quod culpa molestiae perspiciatis modi magni quisquam
+                         inventore iusto et esse placeat ea deleniti repudiandae consequatur, eos fuga ut! Excepturi, ratione.</p>
+                 </div>
+                <img src="#" alt="">
+            </section>
+            <footer>
+                <p> &copy; Todos os Direitos reservados- 2018.</p>
+                <nav>
+                    <div>
+                        <ul>
+                                <li>Portfolio</li>
+                                <li>Sobre</li>
+                                <li>Contrate</li>
+                        </ul>
+                    </div>
+                </nav>
+                <div>
+                    <a href="0">Facebook</a>
+                    <a href="0">Email</a>
+                    <a href="0">Twitter</a>
+                </div>
+                <p>Contato@Contato.com.br</p>
+            </footer>
+        </nav>
+    </header>
 
     <script src="/js/jquery-3.2.1.slim.min.js"></script>
     <script src="/js/popper.min.js"></script>
