18-03-18 nav-bar and banner with large button

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- fonts google-->
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet"> 
     <link  rel="stylesheet" href="css/bootstrap.css">
     <link  rel="stylesheet" href="css/index.css">
     <title>Decorações de festas!</title>
@@ -14,21 +16,27 @@
             <div>
                 <h1></h1>
             </div>
-            <div>
-                <ul>
-                    <li>Portfolio</li>
-                    <li>Sobre</li>
-                    <li>Contrate</li>
-                </ul>
+            <div class="container">
+                <div class="nav-bar">
+                    <h1>Trakinagem</h1>
+                    <div class="nav-bar-links">
+                        <ul>
+                            <li><a href="#">Portfolio</a><span> | </span></li>
+                            <li><a href="#">Sobre</a><span> | </span></li>
+                            <li><a href="#">Contrate</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </nav>
-            <section>
-                <div>
-                    <h2>Trakinagem</h2>
-                    <p>Fazemos sua decoração com muita paixão</p>
-                 </div>
-                <a role="button">Contrate agora</a>
-            </section>
+        <div class="header_text">
+                <h2>Trakinagem</h2>
+                <p>Fazemos sua decoração com muita paixão</p>
+                <a href="#" role="button">Contrate agora</a>
+             </div>
+            
+        </header>
+        <main>
             <section>
                 <h3>Últimas decorações</h3>
                 <div>
@@ -51,6 +59,7 @@
                  </div>
                 <img src="#" alt="">
             </section>
+        </main>
             <footer>
                 <p> &copy; Todos os Direitos reservados- 2018.</p>
                 <nav>
@@ -70,7 +79,6 @@
                 <p>Contato@Contato.com.br</p>
             </footer>
         </nav>
-    </header>
 
     <script src="/js/jquery-3.2.1.slim.min.js"></script>
     <script src="/js/popper.min.js"></script>
