19-03-18 finalizacao header, inicio main(last_d)

--- a/src/index.html
+++ b/src/index.html
@@ -32,24 +32,42 @@
         <div class="header_text">
                 <h2>Trakinagem</h2>
                 <p>Fazemos sua decoração com muita paixão</p>
-                <a href="#" role="button">Contrate agora</a>
+                <a href="#" class="btn-large" role="button">Contrate agora</a>
              </div>
             
         </header>
         <main>
-            <section>
-                <h3>Últimas decorações</h3>
-                <div>
-
-                </div>
-                <div>
-
-                </div>
-                <div>
-
-                </div>
-
+            <section id="last_decorations">
+                            <div class="container">
+                                <h3>Últimas decorações</h3>
+                                <div class="card-deck">
+                                        <div class="card">
+                                          <img class="card-img-top" src="img/logo_mae.png" alt="Card image cap">
+                                          <div class="card-body">
+                                            <h5 class="card-title">Mickey</h5>
+                                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                          </div>
+                                        </div>
+                                        <div class="card">
+                                          <img class="card-img-top" src="..." alt="Card image cap">
+                                          <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                          </div>
+                                        </div>
+                                        <div class="card">
+                                          <img class="card-img-top" src="..." alt="Card image cap">
+                                          <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                          </div>
+                                        </div>
+                                      </div>
                 <a role="button">Saiba mais</a>
+            </div>
             </section>
             <section>
                 <div>
