--- a/src/index.html
+++ b/src/index.html
@@ -42,15 +42,15 @@
                                 <h3>Últimas decorações</h3>
                                 <div class="card-deck">
                                         <div class="card">
-                                          <img class="card-img-top" src="img/logo_mae.png" alt="Card image cap">
+                                          <img class="card-img-top" src="img/card_1.jpeg" alt="Card image cap">
                                           <div class="card-body">
-                                            <h5 class="card-title">Mickey</h5>
+                                            <h4 class="card-title">Mickey</h4>
                                             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                           </div>
                                         </div>
                                         <div class="card">
-                                          <img class="card-img-top" src="..." alt="Card image cap">
+                                          <img class="card-img-top" src="img/card_2.jpeg" alt="Card image cap">
                                           <div class="card-body">
                                             <h5 class="card-title">Card title</h5>
                                             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -58,7 +58,7 @@
                                           </div>
                                         </div>
                                         <div class="card">
-                                          <img class="card-img-top" src="..." alt="Card image cap">
+                                          <img class="card-img-top" src="img/card_3.jpeg" alt="Card image cap">
                                           <div class="card-body">
                                             <h5 class="card-title">Card title</h5>
                                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -66,7 +66,9 @@
                                           </div>
                                         </div>
                                       </div>
-                <a role="button">Saiba mais</a>
+                <div class="text-center">                    
+                    <a  href="#" role="button" class="btn-medium">Saiba mais</a>
+                </div>
             </div>
             </section>
             <section>
