20-03-18 spring part O que somos

--- a/src/index.html
+++ b/src/index.html
@@ -66,18 +66,30 @@
                                           </div>
                                         </div>
                                       </div>
-                <div class="text-center">                    
+                <div class="center_link">                    
                     <a  href="#" role="button" class="btn-medium">Saiba mais</a>
                 </div>
             </div>
             </section>
-            <section>
-                <div>
-                    <h3>O que fazemos?</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quod culpa molestiae perspiciatis modi magni quisquam
-                         inventore iusto et esse placeat ea deleniti repudiandae consequatur, eos fuga ut! Excepturi, ratione.</p>
-                 </div>
-                <img src="#" alt="">
+            <section id="we_do">
+                <div class="container">
+                        <div class="container">
+                                <div class="row">
+                                  <div class="col we_do">
+                                        <h3>O que fazemos?</h3>
+                                        <div class="container" style="width:80%;">
+                                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quod culpa molestiae perspiciatis modi magni quisquam
+                                                    inventore iusto et esse placeat ea deleniti repudiandae consequatur, eos fug
+                                                    a ut! Excepturi, ratione.</p>
+                                        </div>    
+                                  </div>
+                                  <div class="col">
+                                        <img  class="img-fluid" src="img/card_5.png" alt="decoração Corinthians">
+                                  </div>
+                                </div>
+                        </div>
+                    </div>
+                
             </section>
         </main>
             <footer>
