--- a/src/index.html
+++ b/src/index.html
@@ -87,8 +87,30 @@
                                                     a ut! Excepturi, ratione.</p>
                                         </div>    
                                   </div>
-                                  <div class="col">
-                                        <img  class="img-fluid" src="img/card_5.png" alt="decoração Corinthians">
+                                  <div class="col carrosel">
+                                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                        <div class="carousel-inner">
+                                          <div class="carousel-item active">
+                                            <img class="d-block w-100" src="img/card_1.jpeg" alt="First slide">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img class="d-block w-100" src="img/carousel_2.jpeg" alt="Second slide">
+                                          </div>
+                                          <div class="carousel-item">
+                                              <div class="img-large">
+                                                    <img class="d-block w-100" src="img/carousel_3.jpeg" alt="Third slide">
+                                              </div>
+                                          </div>
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Next</span>
+                                        </a>
+                                      </div>
                                   </div>
                                 </div>
                         </div>
@@ -128,7 +150,7 @@
             </footer>
         </nav>
 
-    <script src="/js/jquery-3.2.1.slim.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 </body>
