--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,18 @@
 <body>
     <header>
        
-            <nav class="navbar navbar-expand-lg navbar-light navbar-mr bg-light ">
+            <nav class="navbar navbar-expand-lg navbar-dark navbar-mr bg-light ">
                 <div class="container">
-                    <a class="navbar-brand" href="#">Navbar</a>
+                    <img src="./img/logo2.png" class="navbar-brand logo" href="#">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav ml-auto">
-                            <li><a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a></li>
-                            <li><a class="nav-item nav-link" href="#">Features</a></li>
-                            <li><a class="nav-item nav-link" href="#">Pricing</a></li>
-                            <li><a class="nav-item nav-link disabled" href="#">Disabled</a></li>
+                            <li><a class="nav-item nav-link links text-center" href="#">Portfólio<span class="sr-only">(current)</span></a></li>
+                            <li><a class="nav-item nav-link links text-center" href="#">Sobre </a></li>
+                            <li><a class="nav-item nav-link links text-center " href="#">Contato</a></li>
                         </div>
                     </div>
                 </div>
