28-03-18 sprint final, adicionando grid system para responsividade

--- a/src/index.html
+++ b/src/index.html
@@ -47,32 +47,38 @@
                                 <h3>Últimas decorações</h3>
                                 <div class="row">
                                     <div class="col-12">
-                                        <div class="card-deck">
-                                                <div class="card">
-                                                <img class="card-img-top" src="img/card_1.jpeg" alt="Card image cap">
-                                                <div class="card-body">
-                                                    <h4 class="card-title">Mickey</h4>
-                                                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                            <div class="card-deck">
+                                                <div class="col-12 col-sm-12 col-md-4"> 
+                                                        <div class="card">
+                                                        <img class="card-img-top" src="img/card_1.jpg" alt="Card image cap">
+                                                        <div class="card-body">
+                                                            <h4 class="card-title">Mickey</h4>
+                                                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                                        </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-12 col-sm-12 col-md-4">
+                                                        <div class="card">
+                                                        <img class="card-img-top" src="img/card_4.jpg" alt="Card image cap">
+                                                        <div class="card-body">
+                                                            <h5 class="card-title">Disney</h5>
+                                                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                                        </div>
+                                                    </div>
+                                                    </div>
+                                                    <div class="col-12 col-sm-12 col-md-4">
+                                                        <div class="card">
+                                                        <img class="card-img-top" src="img/card_6.jpg" alt="Card image cap">
+                                                        <div class="card-body">
+                                                            <h5 class="card-title">Especiais</h5>
+                                                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                                        </div>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                                </div>
-                                                <div class="card">
-                                                <img class="card-img-top" src="img/card_2.jpeg" alt="Card image cap">
-                                                <div class="card-body">
-                                                    <h5 class="card-title">Card title</h5>
-                                                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                                </div>
-                                                </div>
-                                                <div class="card">
-                                                <img class="card-img-top" src="img/card_3.jpeg" alt="Card image cap">
-                                                <div class="card-body">
-                                                    <h5 class="card-title">Card title</h5>
-                                                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                                                </div>
-                                                </div>
-                                            </div>
                                         </div>
                                     </div>
                 <div class="center_link">                    
@@ -153,7 +159,6 @@
                     </div>
                 
             </footer>
-        </nav>
 
     <script src="/js/jquery.min.js"></script>
     <script src="/js/popper.min.js"></script>
