--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav ml-auto">
-                            <li><a class="nav-item nav-link links text-center" href="#">Portfólio<span class="sr-only">(current)</span></a></li>
-                            <li><a class="nav-item nav-link links text-center" href="#">Sobre </a></li>
-                            <li><a class="nav-item nav-link links text-center " href="#">Contato</a></li>
+                            <li><a class="nav-item nav-link links text-center" href="#last_decorations">Portfólio<span class="sr-only">(current)</span></a></li>
+                            <li><a class="nav-item nav-link links text-center" href="#we_do">Sobre </a></li>
+                            <li><a class="nav-item nav-link links text-center " href="#footer">Contato</a></li>
                         </div>
                     </div>
                 </div>
@@ -52,8 +52,12 @@
                                                         <div class="card">
                                                         <img class="card-img-top" src="img/card_1.jpg" alt="Card image cap">
                                                         <div class="card-body">
-                                                            <h4 class="card-title">Mickey</h4>
-                                                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                                            <h4 class="card-title">Urso Rosa</h4>
+                                                            <blockquote class="card-text">Temas focados nos mais diversos peronagens de filmes, desenhos, seriados da atualidade, 
+                                                                baseado no pedido do seu filho ou quem sabe, de você mesmo! Não nos limitamos, estamos sempre buscando atingir todas
+                                                                os temas.
+                                                                -
+                                                            </blockquote>
                                                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                                         </div>
                                                         </div>
@@ -62,8 +66,10 @@
                                                         <div class="card">
                                                         <img class="card-img-top" src="img/card_4.jpg" alt="Card image cap">
                                                         <div class="card-body">
-                                                            <h5 class="card-title">Disney</h5>
-                                                            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                                                            <h5 class="card-title">Chá de Bebê</h5>
+                                                            <blockquote class="card-text">Em nossas decorações para chá de bebê, trazemos novidades, onde não focamos apenas em cores
+                                                                mas também, conseguimos integrar uma personalização, para ficar marcado para sempre na vida da família!
+                                                            </blockquote>
                                                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                                         </div>
                                                     </div>
@@ -73,7 +79,10 @@
                                                         <img class="card-img-top" src="img/card_6.jpg" alt="Card image cap">
                                                         <div class="card-body">
                                                             <h5 class="card-title">Especiais</h5>
-                                                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                                                            <blockquote class="card-text">Muitas das festas onde somos contratados, os pais querem fazer uma surpresa, ou eles não tem
+                                                                um tema em mente, para nós, isso não é um problema, pois também trazemos uma opção de temas especiais, onde exploramos
+                                                                os mais diversos tipos de decoração, com muita criatividade e beleza!
+                                                            </blockquote>
                                                             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                                         </div>
                                                         </div>
@@ -93,9 +102,11 @@
                                       <div class="col-md-6 we_do">
                                             <h3>O que fazemos?</h3>
                                             <div class="container" style="width:80%;">
-                                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quod culpa molestiae perspiciatis modi magni quisquam
-                                                        inventore iusto et esse placeat ea deleniti repudiandae consequatur, eos fug
-                                                        a ut! Excepturi, ratione.</p>
+                                                <blockquote>Somos uma empresa que já está no mercado a muito tempo, focada em decorações de festas, onde buscamos
+                                                    a maior satisfação do cliente, priozando a qualidade e a criatividade.
+                                                    Nosso principal objetivo hoje é transformar uma data importante, muito mais alegre e bonita, pois 
+                                                    acreditamos que quando algo é bem visto, sempre será lembrado com carinho.
+                                                </blockquote>
                                             </div>    
                                       </div>
                                       <div class="col-md-6 carrosel">
@@ -154,7 +165,7 @@
                             </ul>
                             </div>
                             <div class="contato-footer">
-                                <p>Telefone: (11) 9999-9999</p>
+                                <p>Whatsapp: (11) 9979-7261</p>
                              </div>
                     </div>
                 
