--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" 
     integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
-    <link  rel="stylesheet" href="src/css/bootstrap.css">
-    <link  rel="stylesheet" href="src/css/index.css">
+    <link  rel="stylesheet" href="css/bootstrap.css">
+    <link  rel="stylesheet" href="css/index.css">
     <title>Decorações de festas!</title>
 </head>
 <body>
