--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" 
     integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
-    <link  rel="stylesheet" href="css/bootstrap.css">
-    <link  rel="stylesheet" href="css/index.css">
+    <link  rel="stylesheet" href="src/css/bootstrap.css">
+    <link  rel="stylesheet" href="src/css/index.css">
     <title>Decorações de festas!</title>
 </head>
 <body>
@@ -50,7 +50,7 @@
                                             <div class="card-deck">
                                                 <div class="col-12 col-sm-12 col-md-4"> 
                                                         <div class="card">
-                                                        <img class="card-img-top" src="img/card_1.jpg" alt="Card image cap">
+                                                        <img class="card-img-top" src="src/img/card_1.jpg" alt="Card image cap">
                                                         <div class="card-body">
                                                             <h4 class="card-title">Urso Rosa</h4>
                                                             <blockquote class="card-text">Temas focados nos mais diversos peronagens de filmes, desenhos, seriados da atualidade, 
@@ -64,7 +64,7 @@
                                                     </div>
                                                     <div class="col-12 col-sm-12 col-md-4">
                                                         <div class="card">
-                                                        <img class="card-img-top" src="img/card_4.jpg" alt="Card image cap">
+                                                        <img class="card-img-top" src="src/img/card_4.jpg" alt="Card image cap">
                                                         <div class="card-body">
                                                             <h5 class="card-title">Chá de Bebê</h5>
                                                             <blockquote class="card-text">Em nossas decorações para chá de bebê, trazemos novidades, onde não focamos apenas em cores
@@ -76,7 +76,7 @@
                                                     </div>
                                                     <div class="col-12 col-sm-12 col-md-4">
                                                         <div class="card">
-                                                        <img class="card-img-top" src="img/card_6.jpg" alt="Card image cap">
+                                                        <img class="card-img-top" src="src/img/card_6.jpg" alt="Card image cap">
                                                         <div class="card-body">
                                                             <h5 class="card-title">Especiais</h5>
                                                             <blockquote class="card-text">Muitas das festas onde somos contratados, os pais querem fazer uma surpresa, ou eles não tem
@@ -113,14 +113,14 @@
                                         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                             <div class="carousel-inner">
                                               <div class="carousel-item active">
-                                                <img class="d-block w-100" src="img/card_1.jpeg" alt="First slide">
+                                                <img class="d-block w-100" src="src/img/card_1.jpeg" alt="First slide">
                                               </div>
                                               <div class="carousel-item">
-                                                <img class="d-block w-100" src="img/carousel_2.jpeg" alt="Second slide">
+                                                <img class="d-block w-100" src="src/img/carousel_2.jpeg" alt="Second slide">
                                               </div>
                                               <div class="carousel-item">
                                                   <div class="img-large">
-                                                        <img class="d-block w-100" src="img/carousel_3.jpeg" alt="Third slide">
+                                                        <img class="d-block w-100" src="src/img/carousel_3.jpeg" alt="Third slide">
                                                   </div>
                                               </div>
                                             </div>
