--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        
             <nav class="navbar navbar-expand-lg navbar-dark navbar-mr bg-light ">
                 <div class="container">
-                    <img src="./img/logo2.png" class="navbar-brand logo" href="#">
+                    <img src="src/img/logo2.png" class="navbar-brand logo" href="#">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
